--- a/theme.cfg
+++ b/theme.cfg
@@ -3,3 +3,5 @@ author: Andrei Esteves
 version: 0.1
 summary: The goal is to be like wiimenu
 keywords: wii, nintendo, 1080p, 16:9, testing
+assets.screenshots:
+  screenshots/1.png
