--- a/theme.cfg
+++ b/theme.cfg
@@ -5,3 +5,4 @@ summary: The goal is to be like wiimenu
 keywords: wii, nintendo, 1080p, 16:9, testing
 assets.screenshots:
   screenshots/1.png
+  screenshots/2.png
