--- a/theme.cfg
+++ b/theme.cfg
@@ -1,6 +1,6 @@
-name: Revolution Menu
+name: Revolution Menu (DEV)
 author: Andrei Esteves
-version: 0.1
+version: 0.1.3
 summary: The goal is to be like wiimenu
 keywords: wii, nintendo, 1080p, 16:9, testing
 assets.screenshots:
